// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar rendering should match to snapshot - AvatarSize Large: AvatarSize Large Avatar snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#6200ee",
        "borderRadius": 24,
        "height": 48,
        "width": 48,
      },
      undefined,
    ]
  }
>
  <Image
    source={Object {}}
    style={
      Object {
        "borderRadius": 24,
        "height": 48,
        "width": 48,
      }
    }
  />
</View>
`;

exports[`Avatar rendering should match to snapshot - AvatarSize No Theme: AvatarSize No Theme Avatar snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#6200ee",
        "borderRadius": 32,
        "height": 64,
        "width": 64,
      },
      undefined,
    ]
  }
>
  <Image
    source={Object {}}
    style={
      Object {
        "borderRadius": 32,
        "height": 64,
        "width": 64,
      }
    }
  />
</View>
`;

exports[`Avatar rendering should match to snapshot - AvatarSize Small: AvatarSize Small Avatar snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#6200ee",
        "borderRadius": 16,
        "height": 32,
        "width": 32,
      },
      undefined,
    ]
  }
>
  <Image
    source={Object {}}
    style={
      Object {
        "borderRadius": 16,
        "height": 32,
        "width": 32,
      }
    }
  />
</View>
`;

exports[`Avatar rendering should match to snapshot - AvatarSize Standard: AvatarSize Standard Avatar snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#6200ee",
        "borderRadius": 20,
        "height": 40,
        "width": 40,
      },
      undefined,
    ]
  }
>
  <Image
    source={Object {}}
    style={
      Object {
        "borderRadius": 20,
        "height": 40,
        "width": 40,
      }
    }
  />
</View>
`;

exports[`Avatar rendering should match to snapshot - AvatarSize Tiny: AvatarSize Tiny Avatar snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#6200ee",
        "borderRadius": 12,
        "height": 24,
        "width": 24,
      },
      undefined,
    ]
  }
>
  <Image
    source={Object {}}
    style={
      Object {
        "borderRadius": 12,
        "height": 24,
        "width": 24,
      }
    }
  />
</View>
`;

exports[`Avatar rendering should match to snapshot - AvatarSize XLarge: AvatarSize XLarge Avatar snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#6200ee",
        "borderRadius": 40,
        "height": 80,
        "width": 80,
      },
      undefined,
    ]
  }
>
  <Image
    source={Object {}}
    style={
      Object {
        "borderRadius": 40,
        "height": 80,
        "width": 80,
      }
    }
  />
</View>
`;

exports[`Avatar rendering should match to snapshot - Color: Color Avatar snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#6200ee",
        "borderRadius": 32,
        "height": 64,
        "width": 64,
      },
      undefined,
    ]
  }
>
  <Image
    source={Object {}}
    style={
      Object {
        "borderRadius": 32,
        "height": 64,
        "width": 64,
      }
    }
  />
</View>
`;

exports[`Avatar rendering should match to snapshot - Default Icon: Default Avatar type icon snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#6200ee",
        "borderRadius": 32,
        "height": 64,
        "width": 64,
      },
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      Object {},
    ]
  }
>
  <Text
    accessibilityElementsHidden={true}
    allowFontScaling={false}
    importantForAccessibility="no-hide-descendants"
    pointerEvents="none"
    style={
      Array [
        Object {
          "color": "#000000",
          "fontSize": 38.4,
        },
        Array [
          Object {
            "transform": Array [
              Object {
                "scaleX": 1,
              },
            ],
          },
          Object {
            "backgroundColor": "transparent",
          },
        ],
        Object {
          "fontFamily": "Material Design Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Avatar rendering should match to snapshot - Default Image: Default Avatar type image snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#6200ee",
        "borderRadius": 32,
        "height": 64,
        "width": 64,
      },
      undefined,
    ]
  }
>
  <Image
    source={Object {}}
    style={
      Object {
        "borderRadius": 32,
        "height": 64,
        "width": 64,
      }
    }
  />
</View>
`;

exports[`Avatar rendering should match to snapshot - Default Text: Default Avatar type text snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#6200ee",
        "borderRadius": 32,
        "height": 64,
        "width": 64,
      },
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      Object {},
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "color": "#000000",
          "fontFamily": "System",
          "fontWeight": "400",
          "textAlign": "left",
        },
        Array [
          Object {
            "textAlign": "center",
            "textAlignVertical": "center",
          },
          Object {
            "color": "#000000",
            "fontSize": 32,
            "lineHeight": 64,
          },
          undefined,
        ],
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Avatar rendering should match to snapshot - LabelStyle: LabelStyle Avatar snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#6200ee",
        "borderRadius": 32,
        "height": 64,
        "width": 64,
      },
      undefined,
    ]
  }
>
  <Image
    source={Object {}}
    style={
      Object {
        "borderRadius": 32,
        "height": 64,
        "width": 64,
      }
    }
  />
</View>
`;

exports[`Avatar rendering should match to snapshot - Style: Style Avatar snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#6200ee",
        "borderRadius": 32,
        "height": 64,
        "width": 64,
      },
      Object {},
    ]
  }
>
  <Image
    source={Object {}}
    style={
      Object {
        "borderRadius": 32,
        "height": 64,
        "width": 64,
      }
    }
  />
</View>
`;

exports[`Avatar rendering should match to snapshot - Theme: Theme Avatar snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#6200ee",
        "borderRadius": 32,
        "height": 64,
        "width": 64,
      },
      undefined,
    ]
  }
>
  <Image
    source={Object {}}
    style={
      Object {
        "borderRadius": 32,
        "height": 64,
        "width": 64,
      }
    }
  />
</View>
`;
